--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thecodingmachine/safe",
+    "name": "shish/safe",
     "description": "PHP core functions that throw exceptions instead of returning FALSE on error",
     "license": "MIT",
     "autoload": {
@@ -106,7 +106,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^1",
-        "thecodingmachine/phpstan-strict-rules": "^1.0",
+        "shish/phpstan-strict-rules": "^1.0",
         "squizlabs/php_codesniffer": "^3.2",
         "phpunit/phpunit": "^10",
         "php-parallel-lint/php-parallel-lint": "^1.4"
