--- a/.github/workflows/auto-regenerate.yml
+++ b/.github/workflows/auto-regenerate.yml
@@ -2,8 +2,8 @@
 name: "Auto Regenerate"
 
 on:
-  schedule:
-    - cron:  '0 3 * * *'
+#  schedule:
+#    - cron:  '0 3 * * *'
   workflow_dispatch:
 
 jobs:
