--- a/composer.json
+++ b/composer.json
@@ -106,7 +106,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^1",
-        "shish/phpstan-strict-rules": "^1.0",
+        "shish/phpstan-safe-rule": "^1.0",
         "squizlabs/php_codesniffer": "^3.2",
         "phpunit/phpunit": "^10",
         "php-parallel-lint/php-parallel-lint": "^1.4"
